k8s/overlays/shokohsc/netflix/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: netflix
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-cluster-issuer
    dashboard.shokohsc.home/name: netflix
    dashboard.shokohsc.home/url: 'https://dev.netflix.shokohsc.home'
    dashboard.shokohsc.home/type: app
    dashboard.shokohsc.home/icon: wrench
spec:
  rules:
  - host: dev.netflix.shokohsc.home
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: netflix
            port:
              number: 80
  tls:
  - hosts:
    - dev.netflix.shokohsc.home
    secretName: netflix-cert
